--- a/mysql.yml
+++ b/mysql.yml
@@ -14,6 +14,6 @@
        state: started
 
   - name: setting mysql root password
-    ansible.builtin.service: mysql_secure_installation --set-root-pass ExpenseApp@1
+    ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
 
    
