--- a/mysql.yml
+++ b/mysql.yml
@@ -4,10 +4,9 @@
   tasks:
   - name: install mysql server
     ansible.builtin.yum:
-      name: http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
+      name: mysql-server
       state: present
-    when: ansible_os_family == "RedHat"
-   
+    
   - name:  service restart
     ansible.builtin.service:
        name: mysqld
