--- a/mysql.yml
+++ b/mysql.yml
@@ -11,6 +11,7 @@
     ansible.builtin.service:
        name: mysqld
        state: started
+       enabled: true
 
   - name: setting mysql root password
     ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
