--- a/backend.yml
+++ b/backend.yml
@@ -56,7 +56,7 @@
         state: present
 
     - name: injecting schema
-      ansible.builtin.shell: mysql -h <MYSQL-SERVER-IPADDRESS> -uroot -pExpenseApp@1 < /app/schema/backend.sql
+      ansible.builtin.shell: mysql -h 172.31.42.80 -uroot -pExpenseApp@1 < /app/schema/backend.sql
     
     - name: Restart service cron on centos, in all cases, also issue daemon-reload to pick up config changes
       ansible.builtin.systemd_service:
