--- a/backend.yml
+++ b/backend.yml
@@ -58,9 +58,8 @@
     - name: Installing pre-req package for schema injection
       ansible.builtin.pip:
         name: 
-         
+         - PyMySQL
          - cryptography
-         - MySQL-python
         executable: pip3.11
 
     - name: Schema Injection
