--- a/backend.yml
+++ b/backend.yml
@@ -58,7 +58,7 @@
     - name: Installing pre-req package for schema injection
       ansible.builtin.pip:
         name: 
-         - PyMySQL
+         - pymysql
          - cryptography
         executable: pip3.11
 
