--- a/backend.yml
+++ b/backend.yml
@@ -71,7 +71,7 @@
         name: all
         state: import
         target: /app/schema/backend.sql 
-        login_host: 172.31.39.59
+        login_host: "mysql.eternallearnings.shop"
         login_user: root
         login_password: ExpenseApp@1
     
